--- a/test/fixtures/departments.yml
+++ b/test/fixtures/departments.yml
@@ -1,19 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  Name: MyString
-  Chairman: MyString
-  Examiner: MyString
-  Resultmaker: MyString
-  Classes: 1
+  name: MyString
+  Chairperson: MyString
+  Contact: MyString
   Email: MyString
-  Contact: 1
+  Fax: MyString
 
 two:
-  Name: MyString
-  Chairman: MyString
-  Examiner: MyString
-  Resultmaker: MyString
-  Classes: 1
+  name: MyString
+  Chairperson: MyString
+  Contact: MyString
   Email: MyString
-  Contact: 1
+  Fax: MyString
